--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.30.0",
+    "@elevenlabs/elevenlabs-js": "^2.29.0",
     "@emotion/react": "^11.14.0",
+    "lamejs": "^1.2.1",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "openai": "^6.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "wav-decoder": "^1.3.0",
+    "wav-encoder": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
